--- a/src/components/Outbound_Requests/OutboundRequests.css
+++ b/src/components/Outbound_Requests/OutboundRequests.css
@@ -1,16 +1,17 @@
 .main-container {
     height: 100vh;
     background: #44a08d; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #44a08d, #093637); /* Chrome 10-25, Safari 5.1-6 */
+    /* background: -webkit-linear-gradient(to right, #44a08d, #093637); Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #44a08d, #093637);
 }
 .list-items {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    width: 50%;
-    box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
+    width: 30%;
+    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
     padding: 13px;
+    margin-bottom: 20px;
 }
 
 .list-items img {
@@ -20,16 +21,27 @@
 
 .list-subcontainer {
         position: relative;
-        left: 25%;
+        left: 35%;
         width: 100%;
     }
 
+    .list-subcontainer div {
+        border-radius: 5px;
+        background: linear-gradient(to right, #44a08d, #093637);
+    }
     .approved {
         color: rgb(8, 52, 8);
     }
     .pending {
-        color: yellow;
+        color: #F4D03F;
     }
     .denied {
         color: rgb(170, 66, 40);
+    }
+
+    .list-items button {
+        background: rgba(230, 130, 100, 0.475);
+        border: none;
+        border-radius: 4px;
+        box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.077), 0 6px 6px 0 rgba(0,0,0,0.2);
     }
