--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -6,7 +6,6 @@
     background: linear-gradient(to right, #44a08d, #093637);}
 
 .profilepic img {
-    margin-top: 20px;
     margin-bottom: 20px;
     width: 20%;
     height: 20%;
@@ -28,19 +27,20 @@
     width: 35%;
 }
 
+
 .button-container button {
    font-weight: 500;
-    background: linear-gradient(to left, #44a08d, #093637);
-    box-shadow: 0 2 5 black;
+    background: linear-gradient(175deg, #3f9c86, #0b3838);
+    /* box-shadow: 0 2 5 black; */
     border: none;
     margin-bottom: 6%;
-    width: 100%;
-    padding: 15px;
+    width: 75%;
+    padding: 20px;
     border-radius: 3px;
 }
 /* BUTTON STYLES */
 .button-container button:focus {outline:0}
-.button-container button:hover {font-weight: 900}
+.button-container button:hover {font-weight: 900;}
 
 
 
