--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,10 +5,8 @@
     margin: auto;
     width:100%;
     height: 100vh;
-    background: #44a08d; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #44a08d, #093637); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #44a08d, #093637);}
-
+    background: #fcfafd;
+}
 .box_position {
     width: 50%;
     display: flex;
@@ -21,7 +19,7 @@
     width: 30%;
     padding:30px;
     border-radius: 10px;
-    background: linear-gradient(to left, #589c8a, #093637);
+    background: linear-gradient(to left, #589c8ad9, #093637);
     box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
 }
 
@@ -36,25 +34,26 @@
     /* width:45%; */
     height:40px;
     margin-top:40px;
-    color:rgba(255, 255, 255, 0.749);
+    color:rgb(16, 71, 16);;
     font-size:20px;
     border-radius: 6px;
     border:none;
     background:transparent;
-    border: .5px solid rgba(255, 255, 255, 0.749);
+    border: .5px solid rgb(16, 71, 16);;
     font-family: 'futura-light';
     letter-spacing: 5px;
+    outline: none;
 }
 
 .login_button:hover {
-    color: rgb(255, 255, 255);
-    border: 1px solid rgb(255, 255, 255);
+    color: rgb(16, 71, 16);;
+    border: 1px solid rgb(16, 71, 16);;
 }
 .helo{
     margin-top:15px;
     margin-bottom: 25px;
     font-size:1.5em;
-    color:white;
+    color:rgb(16, 71, 16);
     font-weight: 900;
     font-family: 'futura-light';
     letter-spacing: 5px;
