--- a/src/components/Inbound_Requests/InboundRequests.css
+++ b/src/components/Inbound_Requests/InboundRequests.css
@@ -6,12 +6,19 @@
     background: linear-gradient(to right, #44a08d, #093637);
 }
 
-.header {
-    font-size: 1.75em;
-    margin-bottom: 25px;
+.incoming-header {
+    font-size: 1.5em;
+    color:  rgb(16, 71, 16);
+    font-weight: 200;
+    letter-spacing: 4px;
+    padding-top: 15px;
+    height: 50px;
+    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2)
+
 }
 
 .profile-pic  img {
+    margin-top: 15px;
     margin-bottom: 15px;
     height: 20%;
     width: 20%;
@@ -21,15 +28,14 @@
 .list-items {
     color: white;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    width: 50%;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
     opacity:.8;
     padding: 13px;
 }
 
-.list-items img {
+.requests img {
     height: 40px;
     width: 40px;
 }
@@ -37,4 +43,5 @@
 .requests {
     position: relative;
     left: 25%;
+    right: 25%;
 }
