--- a/src/components/Outbound_Requests/OutboundRequests.css
+++ b/src/components/Outbound_Requests/OutboundRequests.css
@@ -1,40 +1,53 @@
 .main-container {
     height: 100vh;
-    background: #44a08d; /* fallback for old browsers */
-    /* background: -webkit-linear-gradient(to right, #44a08d, #093637); Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #44a08d, #093637);
 }
+
+.outbound-header {
+    font-size: 1.5em;
+    color:  rgb(16, 71, 16);
+    font-weight: 200;
+    letter-spacing: 4px;
+    padding-top: 15px;
+    height: 50px;
+    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2)
+
+}
+
 .list-items {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 30%;
+    width: 35%;
     box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
     padding: 13px;
     margin-bottom: 20px;
 }
 
-.list-items img {
-    height: 130px;
-    width: 130px;
+.list-items div {
+    margin: auto;
+    background: #093637e9;
 }
 
+
 .list-subcontainer {
-        position: relative;
-        left: 35%;
+        margin: auto;
         width: 100%;
     }
 
     .list-subcontainer div {
+        margin: 25px auto;
+        background: rgba(9,54, 55, .3);
         border-radius: 5px;
-        background: linear-gradient(to right, #44a08d, #093637);
     }
     .approved {
         color: rgb(8, 52, 8);
     }
+
     .pending {
+        background: #093637e9;
         color: #F4D03F;
     }
+
     .denied {
         color: rgb(170, 66, 40);
     }
