--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,20 +1,26 @@
 .profile-container {
     width: 100%;
     height: 100vh;
-    background: #44a08d; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #44a08d, #093637); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #44a08d, #093637);}
+    background: #fcfafd;
+}
 
 .profilepic img {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     width: 20%;
     height: 20%;
     border-radius: 50%;
 }
 
-.header {
-    padding-top: 10px;
-    font-size: 1.75em;
+.profile-header {
+    margin-top:7px;
+    font-size: 1.5em;
+    color:  rgb(16, 71, 16);
+    font-weight: 200;
+    letter-spacing: 4px;
+    padding-top: 15px;
+    height: 50px;
+    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
+    margin-bottom: 17px;
 }
 
 .button-container {
@@ -29,14 +35,16 @@
 
 
 .button-container button {
+    font-size: .75em;
+    letter-spacing: 5px;
+    color: rgb(16, 71, 16);
    font-weight: 500;
-    background: linear-gradient(175deg, #3f9c86, #0b3838);
-    /* box-shadow: 0 2 5 black; */
+    background: #093637e9;
     border: none;
     margin-bottom: 6%;
-    width: 75%;
+    width: 30%;
     padding: 20px;
-    border-radius: 3px;
+    border-radius: 5px;
 }
 /* BUTTON STYLES */
 .button-container button:focus {outline:0}
