--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,10 +1,12 @@
 .search {
-    color: black;
+    color:  rgb(16, 71, 16);;
     height: 100vh;
     width:  100%;
-    background: #44a08d; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #44a08d, #093637); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #44a08d, #093637);
+    background: #fcfafd;
+    /* background: #44a08d; fallback for old browsers */
+    /* background: -webkit-linear-gradient(to right, #44a08d, #093637); Chrome 10-25, Safari 5.1-6 */
+    
+    /* background: linear-gradient(to right, #44a08d, #093637); */
 }
 
 .list-container {
@@ -14,8 +16,15 @@
     margin-top: 15px;
 }
 
-.header {
-    margin: 10 0;
+.search-header {
+    font-size: 1.5em;
+    color:  rgb(16, 71, 16);
+    font-weight: 200;
+    letter-spacing: 4px;
+    padding-top: 25px;
+    height: 50px;
+    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2)
+
 }
 .search-list {
     width: 50%;
@@ -23,9 +32,10 @@
 }
 
 .list-gear {
- 
+    background: rgba(255, 255, 255, 0.927);
     padding: 13px;
     margin: 5px;
+    border-radius: 5px;
     box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
 }
 
@@ -41,10 +51,14 @@
 
 a {
     text-decoration: none;
-    color: black;
+    color: rgb(16, 71, 16);;
 }
 
 .list-gear img {
-    height: 40px;
-    width: 40px;
+    height: 60px;
+    width: 60px;
+}
+.list-gear img:hover {
+    height: 150px;
+    width: 170px;
 }
