--- a/src/components/Bag/AddToBag.css
+++ b/src/components/Bag/AddToBag.css
@@ -1,6 +1,4 @@
 .container {
-    padding-top: 10px;
-    padding-bottom: 10px;
     margin: auto;
     width: 100%;
     background: #fcfafd;
@@ -16,18 +14,6 @@
     margin: auto;
     margin-bottom: 20px;
     width:50%;
-}
-
-.addtosac-header {
-    font-size: 1.5em;
-    color: rgb(16, 71, 16);
-    height: 50px;
-    margin-bottom: 20px;
-    font-weight: 200;
-    letter-spacing: 4px;
-    padding-top: 15px;
-    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
-
 }
 
 .input-container-child input:nth-child(3) {
@@ -70,7 +56,6 @@ textarea {
     text-align: center;
     background:rgba(23, 43, 42, 0.146);
     width: 55%;
-    margin-bottom: 25px;
     border-radius: 5px;
     border: none;
     padding-left: 5px;
@@ -98,3 +83,26 @@ textarea {
     height: 25px;
     text-align: center;
 }
+  
+.dropzone {
+    box-shadow: 1px 2px 8px 0 black;
+    /* border: .5px dashed black; */
+    margin: 25px auto;
+    height: 100px;
+    width: 150px;
+    border-radius: 4px;
+}
+
+.dropzone:hover {
+    cursor: pointer;
+}
+
+.dropzone p {
+    padding-top: 40px;
+}
+
+
+
+
+
+  
