--- a/src/components/Bag/viewBag.css
+++ b/src/components/Bag/viewBag.css
@@ -3,21 +3,8 @@ body {
     background: #fcfafd;
 }
 
-.view-sac-header {
-    font-size: 1.5em;
-    color:  rgb(16, 71, 16);
-    font-weight: 200;
-    letter-spacing: 4px;
-    padding-top: 15px;
-    height: 50px;
-    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
-    margin-bottom: 10px;
-}
-
 .bag-container {
     height: 100vh;
-    padding-top: 10px;
-    padding-bottom: 10px;
     margin: auto;
     width: 100%;
     background: #fcfafd;
@@ -33,7 +20,7 @@ body {
 }
 
 .bag p {
-   margin: 3px;
+    margin: 3px;
     display: flex;
     padding: 4px 8px;
     justify-content: space-between;
@@ -41,6 +28,10 @@ body {
     border-radius: 5px;
     border: .75px solid rgba(0, 0, 0, 0.452);
     width: 25%;
+}
+
+.bag p img {
+    width: 20%;
 }
 
 .bag p button {
