--- a/src/components/Inbound_Requests/InboundRequests.css
+++ b/src/components/Inbound_Requests/InboundRequests.css
@@ -1,21 +1,8 @@
-.container {
-
-    padding-top: 10px;
+/* .container {
     width: 100%;
     height: 100vh;
     background: linear-gradient(to right, #44a08d, #093637);
-}
-
-.incoming-header {
-    font-size: 1.5em;
-    color:  rgb(16, 71, 16);
-    font-weight: 200;
-    letter-spacing: 4px;
-    padding-top: 15px;
-    height: 50px;
-    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2)
-
-}
+} */
 
 .profile-pic  img {
     margin-top: 15px;
