--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -24,11 +24,13 @@
 }
 
 .logo{
+    padding-top: 20px;
     margin: auto;
     width:150px;
     height:150px;
-    background-image: url('./../../assets/mountain-climbing-by-Vexels.png');
-    background-size: auto 100%;
+    background-image: url('./../../assets/-rendition;size=1200;version=0.png');
+    background-size: 100% auto;
+    background-position: cover;
 }
 .login_button{
     /* width:45%; */
@@ -51,7 +53,7 @@
 }
 .helo{
     margin-top:15px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     font-size:1.5em;
     color:rgb(16, 71, 16);
     font-weight: 900;
