added fully functioning messaging with reply/sendmessage

--- a/src/Header.css
+++ b/src/Header.css
@@ -9,20 +9,26 @@
     letter-spacing: 4px;
     height: 70px;
     box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
 .main-header h1 {
-    margin-right: 55px;
+    padding-left: 45px;
     width: 100%;
 }
 
 .main-header img {
+    padding-left: 10px;
     width: 50px;
     height: 50px;
 }
 
-.dropdown-menu {
-    float:  right;
-    margin-bottom: 25px;
+.icon button {
+   margin-right: 50px !important;
+   margin-bottom: 25px !important;
 }
+
+MenuItem {
+    opacity: .5;
+}
+
