--- a/src/components/Bag/viewBag.css
+++ b/src/components/Bag/viewBag.css
@@ -26,7 +26,7 @@ body {
     justify-content: space-between;
     align-items: center;
     border-radius: 5px;
-    border: .75px solid rgba(0, 0, 0, 0.452);
+    box-shadow: 1px 1px 1px gray;
     width: 25%;
 }
 
@@ -47,11 +47,16 @@ body {
 .bag img {
     width: 85px;
     height: 85px;
+    transition: ease-in-out 1.5s;
+    border-radius: 50%;
+    border: 4px solid gray;
 }
 
 .bag img:active {
+    transition: ease-in-out 1s;
+    padding: 10px;
     height: 200px;
-    width: 180px;
+    width: 200px;
 }
 
 .rented {
