--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -17,16 +17,26 @@ input {
     border: .5px solid gray;
     border-radius: 4px;
 }
+
+input:focus {
+    transition: ease-in-out;
+    transition-duration: .15s;
+    box-shadow: 1px 1px 6px 1px rgba(128, 128, 128, 0.664) inset;
+}
+
 .form button {
     padding: 4px;
 }
+
 select {
     outline: none;
     margin-right: 5px;
 }
+
 .form {
     margin-top: 10px;
 }
+
 .list-container {
     display: flex;
     justify-content: center;
@@ -38,8 +48,6 @@ select {
     width: 50%;
     padding: 20px;
 }
-
-
 
 .list-gear {
     background: rgba(255, 255, 255, 0.927);
@@ -68,7 +76,10 @@ a {
     height: 60px;
     width: 60px;
 }
+
 .list-gear img:hover {
+    transition: ease-in-out;
+    transition-duration: 1s;
     height: 150px;
     width: 170px;
 }
