--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  font-family: 'futura-medium'
+  font-family: 'futura-medium';
+  box-sizing: border-box;
 }
 
 .App-header {
