--- a/src/Header.css
+++ b/src/Header.css
@@ -10,6 +10,7 @@
     height: 70px;
     box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
     margin-bottom: 25px;
+    box-sizing: border-box;
 }
 
 .main-header h1 {
@@ -32,3 +33,8 @@ MenuItem {
     opacity: .5;
 }
 
+@media (max-width: 400px) {
+    .main-header{
+        width:100%;
+    }
+}
