--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -25,7 +25,7 @@
 .button-container button {
     font-size: .75em;
     letter-spacing: 5px;
-    color: rgb(16, 71, 16);
+    /* color: rgb(16, 71, 16); */
     font-weight: 500;
     background: #0936374c;
     border: none;
