--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -6,7 +6,7 @@
 }
 
 .search img {
-    width: 34%;
+    width: 30%;
     height: 50%;
 }
 
@@ -83,6 +83,18 @@ a {
     height: 150px;
     width: 170px;
 }
+
+@media (min-width: 1500px) {
+    .search img {
+        width: 25%;
+    }
+}
+@media (min-width: 1300px) {
+    .search img {
+        width: 28%;
+    }
+}
+
 
 @media (max-width: 900px) {
     .search img {
