--- a/src/components/Inbound_Requests/InboundRequests.css
+++ b/src/components/Inbound_Requests/InboundRequests.css
@@ -1,9 +1,6 @@
-/* .container {
+.container {
     width: 100%;
-    height: 100vh;
-    background: linear-gradient(to right, #44a08d, #093637);
-} */
-
+}
 .profile-pic  img {
     margin-top: 15px;
     margin-bottom: 15px;
@@ -12,23 +9,38 @@
     border-radius: 50%;
 }
 
+.mapcontainer button {
+    margin-right: 2.5px;
+    margin-left: 2.5px;
+    background: transparent;
+    padding: 4px 8px;
+}
 .list-items {
+    margin: auto;
     color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    box-shadow: 0 10px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
-    opacity:.8;
-    padding: 13px;
 }
 
 .requests img {
     height: 40px;
     width: 40px;
 }
-
 .requests {
-    position: relative;
-    left: 25%;
-    right: 25%;
+    margin: auto;
+    width: 33%;
+
+}
+.requests div {
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+    padding: 5px 15px;
+}
+
+.mapcontainer {
+    box-shadow: 1px 1px 15px 7px gray inset;
 }
