--- a/src/components/Outbound_Requests/OutboundRequests.css
+++ b/src/components/Outbound_Requests/OutboundRequests.css
@@ -1,94 +1,47 @@
-.main-container {
-    height: 100vh;
+    .main-container {
+        height: 100vh;
+        color: black;
 }
 
-.outbound-header {
-    font-size: 1.5em;
-    color:  rgb(16, 71, 16);
-    font-weight: 200;
-    letter-spacing: 4px;
-    padding-top: 15px;
-    height: 50px;
-    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2)
-
+    .list-items {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 35%;
+        box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
+        padding: 13px;
+        margin-bottom: 20px;
+        color: black;
 }
 
-.list-items {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 35%;
-    box-shadow: 0 15px 20px 0 rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
-    padding: 13px;
-    margin-bottom: 20px;
+    .list-items pending {
+        display: flex;
+        justify-content: space-between;
+        margin: auto;
 }
 
-.list-items div {
-    margin: auto;
-    background: #093637e9;
-}
-
-.list-subcontainer {
+    .list-subcontainer {
         margin: auto;
         width: 100%;
     }
 
     .list-subcontainer div {
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         margin: 25px auto;
-        background: rgba(9,54, 55, .3);
         border-radius: 5px;
     }
 
-    .approved { 
-
-    }
-
-    .pending {
-        background: #093637e9;
-        
-    }
-
-    .pending-circle  {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: black;
-        height: 50px;
-        width: 50px;
-        border-radius: 50% !important;
-        background: yellow !important;
-    }
-    
-    .approved-circle {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 50px;
-        width: 50px;
-        border-radius: 50% !important;
-        background: green !important;
-    }
-
-    .rejected-circle {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: black;
-        height: 50px;
-        width: 50px;
-        border-radius: 50% !important;
-        background: red !important;
-    }
-
-    .denied {
-        
-    }
-
     .list-items button {
-        background: rgba(230, 130, 100, 0.475);
+        background: rgba(230, 130, 100, 0.25);
         border: none;
         border-radius: 4px;
         box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.077), 0 6px 6px 0 rgba(0,0,0,0.2);
     }
+    .oprofile img{
+        margin-top: 15px;
+        margin-bottom: 15px;
+        height: 20%;
+        width: 20%;
+        border-radius: 50%;
+}
