fixed stylings on requests and changed some fonts for the header

--- a/src/components/Inbound_Requests/InboundRequests.css
+++ b/src/components/Inbound_Requests/InboundRequests.css
@@ -1,5 +1,6 @@
 .container {
     width: 100%;
+    padding-bottom: 8px;
 }
 .profile-pic  img {
     margin-top: 15px;
@@ -14,6 +15,7 @@
     margin-left: 2.5px;
     background: transparent;
     padding: 4px 8px;
+    outline: none;
 }
 .list-items {
     margin: auto;
@@ -28,9 +30,15 @@
     width: 40px;
 }
 .requests {
+    border-radius: 5px;
     margin: auto;
     width: 33%;
+    box-shadow: 0 0 10px 0  gray;
+}
 
+.mapcontainer {
+    margin-bottom: 20px;
+    box-shadow: 1px 15px 20px 1px rgba(0,0,0,0.2), 0 6px 6px 0 rgba(0,0,0,0.2);
 }
 .requests div {
     border-radius: 5px;
@@ -41,6 +49,12 @@
     padding: 5px 15px;
 }
 
-.mapcontainer {
-    box-shadow: 1px 1px 15px 7px gray inset;
-}
+/* 
+display: flex;
+justify-content: space-around;
+align-items: center;
+width: 35%;
+
+padding: 13px;
+margin-bottom: 20px;
+color: black; */
