--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -36,7 +36,7 @@
     /* width:45%; */
     height:40px;
     margin-top:40px;
-    color:rgb(16, 71, 16);;
+    color:black;
     font-size:20px;
     border-radius: 6px;
     border:none;
@@ -48,14 +48,14 @@
 }
 
 .login_button:hover {
-    color: rgb(16, 71, 16);;
-    border: 1px solid rgb(16, 71, 16);;
+    color: black;
+    border: 1px solid black;
 }
 .helo{
     margin-top:15px;
     margin-bottom: 15px;
     font-size:1.5em;
-    color:rgb(16, 71, 16);
+    color:black;
     font-weight: 900;
     font-family: 'futura-light';
     letter-spacing: 5px;
