--- a/src/Header.css
+++ b/src/Header.css
@@ -1,10 +1,11 @@
 .main-header {
+    font-family: 'futura-light';
     padding-left: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 1.5em;
-    color:  rgb(16, 71, 16);
+    color:  black;
     font-weight: 550;
     letter-spacing: 4px;
     height: 70px;
