--- a/src/components/Bag/viewBag.css
+++ b/src/components/Bag/viewBag.css
@@ -47,6 +47,11 @@ body {
     width: 90px;
     overflow-x: auto;
 }
+
+.buffer {
+    width: 90px;
+    margin: auto 0;
+}
 .rented {
     width:100%;
     background: #e8ffea;
@@ -82,6 +87,7 @@ body {
 }
 
 .bag p button {
+    outline: none;
     cursor: pointer;
     border: none;
     font-size: 1.25em;
