--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     background: #fcfafd;
+    font-family: 'futura-light';
 }
 
 .profilepic img {
@@ -13,6 +14,7 @@
 }
 
 .button-container {
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,8 +26,9 @@
 
 
 .button-container button {
-    font-size: .75em;
-    letter-spacing: 5px;
+    font-family: 'futura-light';
+    font-size: .85em;
+    letter-spacing: 4px;
     /* color: rgb(16, 71, 16); */
     font-weight: 500;
     background: #0936374c;
