--- a/src/components/Inbound_Requests/InboundRequests.css
+++ b/src/components/Inbound_Requests/InboundRequests.css
@@ -49,6 +49,15 @@
     padding: 5px 15px;
 }
 
+
+@media (max-width: 700px) {
+    .requests {
+        border-radius: 5px;
+        margin: auto;
+        width: 70%;
+        box-shadow: 0 0 10px 0  gray;
+    }
+}
 /* 
 display: flex;
 justify-content: space-around;
