--- a/src/components/Outbound_Requests/OutboundRequests.css
+++ b/src/components/Outbound_Requests/OutboundRequests.css
@@ -50,3 +50,12 @@
         width: 20%;
         border-radius: 50%;
 }
+
+@media (max-width: 700px) {
+    .list-subcontainer {
+        border-radius: 5px;
+        margin: auto;
+        width: 80%;
+        box-shadow: 0 0 10px 0  gray;
+    }
+}
