--- a/src/components/Messages/Inbox.css
+++ b/src/components/Messages/Inbox.css
@@ -8,10 +8,15 @@
 }
 
 .unread-container {
+    margin: auto;
     box-sizing: border-box;
     width: 45%;
 }
-
+.messageimg {
+    width: 50px;
+    height: 50px;
+    padding: 15px;
+}
 .unread-container div {
     margin:  6px auto;
 }
@@ -19,6 +24,7 @@
 
 .read-container {   
     width: 45%;
+    margin: auto;
 }
 
 .read-container div {
