--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -45,6 +45,16 @@
     color: gray;
     font-weight: 500;
 }
+.nameprofile input {
+    background: transparent;
+    border: none;
+    font-size: 1em;
+}
+.aboutme input {
+    background: transparent;
+    border: none;
+}
+
 .aboutme {
     margin-bottom: 10px;
     font-size: .75em;
