--- a/src/components/Bag/viewBag.css
+++ b/src/components/Bag/viewBag.css
@@ -18,6 +18,7 @@ body {
     justify-content: center;
     align-items: center;
 }
+
 .descriptionbag {
     font-size: .75em;
     margin-top: 7px;
@@ -28,9 +29,7 @@ body {
     letter-spacing: 3px;
 }
 
-
 .bag p { 
-
     margin: 3px auto;
     display: flex;
     padding: 4px 8px;
@@ -53,6 +52,7 @@ body {
     margin: auto 0;
 }
 .rented {
+    height: 100px;
     width:100%;
     background: #e8ffea;
 }
@@ -96,19 +96,6 @@ body {
     background: transparent;
 }
 
-/* .bag p button:hover {
-    padding: 10px;
-    font-weight: 800;
-} */
-
-/* .bag img {
-    width: 55px;
-    height: 45px;
-    transition: ease-in-out 1.5s;
-    border-radius: 50%;
-    border: 4px solid gray;
-} */
-
 .bag img:active {
     transition: ease-in-out 1s;
     padding: 10px;
@@ -116,15 +103,15 @@ body {
     width: 200px;
 }
 
-
-
 .not-rented {
-    width: 50%;
+    display: flex;
+    width: 100%;
     background: #ededed
 }
 
 
 
+/* RESPONSIVE */
 
 @media (max-width: 700px) {
     .center div {
