--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -11,6 +11,8 @@
 }
 
 input {
+    width: 6%;
+    height: 18.5px;
     outline: none;
     margin-right: 5px;
     padding: 3px;
@@ -25,10 +27,22 @@ input:focus {
 }
 
 .form button {
-    padding: 4px;
+    padding: 5.5px;
 }
 
+.radius_select {
+    margin-top: 8px;
+}
+.radius {
+    margin-top: 10px;
+    
+}
+
+.radius p {
+    font-size: 1.25em;
+}
 select {
+    height: 25px;
     outline: none;
     margin-right: 5px;
     margin-left: 5px;
